@@ -348,20 +348,22 @@ void CGUIScrollBar::setPos(s32 pos)
 {
 	Pos = core::s32_clamp ( pos, Min, Max );
 
-	if (Horizontal)
+	if ( core::isnotzero ( range() ) )
 	{
-		f32 f = (RelativeRect.getWidth() - ((f32)RelativeRect.getHeight()*3.0f)) / range();
-		DrawPos = (s32)( ( ( Pos - Min ) * f) + ((f32)RelativeRect.getHeight() * 0.5f));
-		DrawHeight = RelativeRect.getHeight();
-	}
-	else
-	{
-		f32 f = (RelativeRect.getHeight() - ((f32)RelativeRect.getWidth()*3.0f)) / range();
+		if (Horizontal)
+		{
+			f32 f = (RelativeRect.getWidth() - ((f32)RelativeRect.getHeight()*3.0f)) / range();
+			DrawPos = (s32)( ( ( Pos - Min ) * f) + ((f32)RelativeRect.getHeight() * 0.5f));
+			DrawHeight = RelativeRect.getHeight();
+		}
+		else
+		{
+			f32 f = (RelativeRect.getHeight() - ((f32)RelativeRect.getWidth()*3.0f)) / range();
 
-		DrawPos = (s32)( ( ( Pos - Min ) * f) + ((f32)RelativeRect.getWidth() * 0.5f));
-		DrawHeight = RelativeRect.getWidth();
+			DrawPos = (s32)( ( ( Pos - Min ) * f) + ((f32)RelativeRect.getWidth() * 0.5f));
+			DrawHeight = RelativeRect.getWidth();
+		}
 	}
-
 }
 
 
